<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>

    <string name="spotify_toast">This button will launch the Spotify Streamer app</string>
    <string name="scores_toast">This button will launch the Football Scores app</string>
    <string name="library_toast">This button will launch the Library app</string>
    <string name="bigger_toast">This button will launch the BuildItBigger app</string>
    <string name="xyz_toast">This button will launch the XYZ Reader app</string>
    <string name="capstone_toast">This button will launch the Capstone app</string>
</resources>
