<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:backgroundTint="#E3F2FD"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PortfolioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:id="@+id/title"
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/app_title_height"
        android:textSize="@dimen/header_text_size"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/spotify_button"
        android:layout_width="@dimen/app_button_width"
        android:layout_height="@dimen/app_button_height"
        android:text="@string/spotify_streamer"
        android:backgroundTint="@color/blue"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:onClick="showMessage"/>

    <Button
        android:id="@+id/scores_button"
        android:layout_width="@dimen/app_button_width"
        android:layout_height="@dimen/app_button_height"
        android:text="@string/scores_app"
        android:backgroundTint="@color/blue"
        android:layout_below="@id/spotify_button"
        android:layout_centerHorizontal="true"
        android:onClick="showMessage"/>

    <Button
        android:id="@+id/library_button"
        android:layout_width="@dimen/app_button_width"
        android:layout_height="@dimen/app_button_height"
        android:text="@string/library_app"
        android:backgroundTint="@color/blue"
        android:layout_below="@id/scores_button"
        android:layout_centerHorizontal="true"
        android:onClick="showMessage"/>

    <Button
        android:id="@+id/bigger_button"
        android:layout_width="@dimen/app_button_width"
        android:layout_height="@dimen/app_button_height"
        android:text="@string/build_it_bigger"
        android:backgroundTint="@color/blue"
        android:layout_below="@id/library_button"
        android:layout_centerHorizontal="true"
        android:onClick="showMessage"/>

    <Button
        android:id="@+id/xyz_button"
        android:layout_width="@dimen/app_button_width"
        android:layout_height="@dimen/app_button_height"
        android:text="@string/xyz_reader"
        android:backgroundTint="@color/blue"
        android:layout_below="@id/bigger_button"
        android:layout_centerHorizontal="true"
        android:onClick="showMessage"/>

    <Button
        android:id="@+id/capstone_button"
        android:layout_width="@dimen/app_button_width"
        android:layout_height="@dimen/app_button_height"
        android:text="@string/capstone"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        android:layout_below="@id/xyz_button"
        android:layout_centerHorizontal="true"
        android:onClick="showMessage"/>

    </LinearLayout>

</ScrollView>
